# bert_pl

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  test.ipynb
configs/: config.yaml
configs/data/: default.yaml
configs/model/: bert.yaml
src/: dataset.py  model.py  tasks.py  train.py  utils.py
