[tool.poetry]
name = "bert-torchpl"
version = "0.1.0"
description = ""
authors = ["HSJeong5744 <jhs0256@gmail.com>"]
readme = "README.md"
packages = [{include = "bert_torchpl"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.0"
pandas = "^2.0.2"
hydra-core = "^1.3.2"
wandb = "^0.15.4"
lightning = "^2.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.3.3"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
